syntax = "proto3";

package myproject.fakeapp;

import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";

service BasicController {
    rpc BasicList(BasicProtoListChildList) returns (BasicProtoListChildList) {}
    rpc Create(BasicService) returns (BasicService) {}
    rpc FetchDataForUser(BasicFetchDataForUser) returns (BasicService) {}
    rpc FetchTranslatedKey(google.protobuf.Empty) returns (BasicFetchTranslatedKey) {}
    rpc GetMultiple(google.protobuf.Empty) returns (BasicServiceList) {}
    rpc ListIds(google.protobuf.Empty) returns (BasicListIds) {}
    rpc ListName(google.protobuf.Empty) returns (BasicListName) {}
    rpc MixParam(CustomMixParamForRequestList) returns (BasicMixParamList) {}
    rpc MixParamWithSerializer(BasicParamWithSerializerRequestList) returns (BasicMixParamWithSerializerList) {}
    rpc MyMethod(CustomNameForRequest) returns (CustomNameForResponse) {}
    rpc TestBaseProtoSerializer(BaseProtoExample) returns (BaseProtoExampleList) {}
    rpc TestEmptyMethod(google.protobuf.Empty) returns (google.protobuf.Empty) {}
    rpc TestNoMetaSerializer(NoMeta) returns (BasicTestNoMetaSerializer) {}
}

service ForeignModelController {
    rpc List(ForeignModelListRequest) returns (ForeignModelList) {}
    rpc Retrieve(ForeignModelRetrieveCustomRetrieveRequest) returns (ForeignModelRetrieveCustom) {}
}

service ImportStructEvenInArrayModelController {
    rpc Create(ImportStructEvenInArrayModel) returns (ImportStructEvenInArrayModel) {}
}

service RecursiveTestModelController {
    rpc Create(RecursiveTestModel) returns (RecursiveTestModel) {}
    rpc Destroy(RecursiveTestModelDestroyRequest) returns (google.protobuf.Empty) {}
    rpc List(RecursiveTestModelListRequest) returns (RecursiveTestModelList) {}
    rpc PartialUpdate(RecursiveTestModelPartialUpdateRequest) returns (RecursiveTestModel) {}
    rpc Retrieve(RecursiveTestModelRetrieveRequest) returns (RecursiveTestModel) {}
    rpc Update(RecursiveTestModel) returns (RecursiveTestModel) {}
}

service RelatedFieldModelController {
    rpc Create(RelatedFieldModel) returns (RelatedFieldModel) {}
    rpc Destroy(RelatedFieldModelDestroyRequest) returns (google.protobuf.Empty) {}
    rpc List(RelatedFieldModelListRequest) returns (RelatedFieldModelList) {}
    rpc PartialUpdate(RelatedFieldModelPartialUpdateRequest) returns (RelatedFieldModel) {}
    rpc Retrieve(RelatedFieldModelRetrieveRequest) returns (RelatedFieldModel) {}
    rpc Update(RelatedFieldModel) returns (RelatedFieldModel) {}
}

service SimpleRelatedFieldModelController {
    rpc Create(SimpleRelatedFieldModel) returns (SimpleRelatedFieldModel) {}
    rpc Destroy(SimpleRelatedFieldModelDestroyRequest) returns (google.protobuf.Empty) {}
    rpc List(SimpleRelatedFieldModelListRequest) returns (SimpleRelatedFieldModelList) {}
    rpc PartialUpdate(SimpleRelatedFieldModelPartialUpdateRequest) returns (SimpleRelatedFieldModel) {}
    rpc Retrieve(SimpleRelatedFieldModelRetrieveRequest) returns (SimpleRelatedFieldModel) {}
    rpc Update(SimpleRelatedFieldModel) returns (SimpleRelatedFieldModel) {}
}

service SpecialFieldsModelController {
    rpc Create(SpecialFieldsModel) returns (SpecialFieldsModel) {}
    rpc Destroy(SpecialFieldsModelDestroyRequest) returns (google.protobuf.Empty) {}
    rpc List(SpecialFieldsModelListRequest) returns (SpecialFieldsModelList) {}
    rpc PartialUpdate(SpecialFieldsModelPartialUpdateRequest) returns (SpecialFieldsModel) {}
    rpc Retrieve(SpecialFieldsModelRetrieve) returns (CustomRetrieveResponseSpecialFieldsModel) {}
    rpc Update(SpecialFieldsModel) returns (SpecialFieldsModel) {}
}

service StreamInController {
    rpc StreamIn(stream StreamInStreamIn) returns (StreamInStreamInList) {}
    rpc StreamToStream(stream StreamInStreamToStream) returns (stream StreamInStreamToStream) {}
    rpc StreamToStreamReadWrite(stream StreamInStreamToStreamRequest) returns (stream StreamInStreamToStreamRequest) {}
}

service SyncUnitTestModelController {
    rpc Create(UnitTestModel) returns (UnitTestModel) {}
    rpc Destroy(UnitTestModelDestroyRequest) returns (google.protobuf.Empty) {}
    rpc List(UnitTestModelListRequest) returns (UnitTestModelList) {}
    rpc ListWithExtraArgs(SyncUnitTestModelListWithExtraArgs) returns (UnitTestModelListExtraArgs) {}
    rpc PartialUpdate(UnitTestModelPartialUpdateRequest) returns (UnitTestModel) {}
    rpc Retrieve(UnitTestModelRetrieveRequest) returns (UnitTestModel) {}
    rpc Stream(UnitTestModelStreamRequest) returns (stream UnitTestModel) {}
    rpc Update(UnitTestModel) returns (UnitTestModel) {}
}

service UnitTestModelController {
    rpc Create(UnitTestModel) returns (UnitTestModel) {}
    rpc Destroy(UnitTestModelDestroyRequest) returns (google.protobuf.Empty) {}
    rpc List(UnitTestModelListRequest) returns (UnitTestModelList) {}
    rpc ListWithExtraArgs(UnitTestModelListWithExtraArgs) returns (UnitTestModelListExtraArgs) {}
    rpc PartialUpdate(UnitTestModelPartialUpdateRequest) returns (UnitTestModel) {}
    rpc Retrieve(UnitTestModelRetrieveRequest) returns (UnitTestModel) {}
    rpc Stream(UnitTestModelStreamRequest) returns (stream UnitTestModel) {}
    rpc Update(UnitTestModel) returns (UnitTestModel) {}
}

service UnitTestModelWithCacheController {
    rpc Create(UnitTestModelWithCache) returns (UnitTestModelWithCache) {}
    rpc Destroy(UnitTestModelWithCacheDestroyRequest) returns (google.protobuf.Empty) {}
    rpc List(google.protobuf.Empty) returns (UnitTestModelWithCacheList) {}
    rpc ListWithAutoCacheCleanOnSaveAndDelete(google.protobuf.Empty) returns (UnitTestModelWithCacheList) {}
    rpc ListWithAutoCacheCleanOnSaveAndDeleteRedis(google.protobuf.Empty) returns (UnitTestModelWithCacheList) {}
    rpc ListWithPossibilityMaxAge(google.protobuf.Empty) returns (UnitTestModelWithCacheList) {}
    rpc ListWithStructFilter(UnitTestModelWithCacheListWithStructFilter) returns (UnitTestModelWithCacheList) {}
    rpc PartialUpdate(UnitTestModelWithCachePartialUpdateRequest) returns (UnitTestModelWithCache) {}
    rpc Retrieve(UnitTestModelWithCacheRetrieveRequest) returns (UnitTestModelWithCache) {}
    rpc Stream(UnitTestModelWithCacheStreamRequest) returns (stream UnitTestModelWithCache) {}
    rpc Update(UnitTestModelWithCache) returns (UnitTestModelWithCache) {}
}

service UnitTestModelWithStructFilterController {
    rpc Create(UnitTestModelWithStructFilter) returns (UnitTestModelWithStructFilter) {}
    rpc Destroy(UnitTestModelWithStructFilterDestroyRequest) returns (google.protobuf.Empty) {}
    rpc EmptyWithFilter(UnitTestModelWithStructFilterEmptyWithFilter) returns (google.protobuf.Empty) {}
    rpc List(UnitTestModelWithStructFilterList) returns (UnitTestModelWithStructFilterList) {}
    rpc PartialUpdate(UnitTestModelWithStructFilterPartialUpdateRequest) returns (UnitTestModelWithStructFilter) {}
    rpc Retrieve(UnitTestModelWithStructFilterRetrieveRequest) returns (UnitTestModelWithStructFilter) {}
    rpc Stream(UnitTestModelWithStructFilterStreamRequest) returns (stream UnitTestModelWithStructFilter) {}
    rpc Update(UnitTestModelWithStructFilter) returns (UnitTestModelWithStructFilter) {}
}

message BaseProtoExample {
    string uuid = 1;
    int32 number_of_elements = 2;
    bool is_archived = 3;
}

message BaseProtoExampleList {
    repeated BaseProtoExample results = 1;
    int32 count = 2;
}

message BasicFetchDataForUser {
    string user_name = 1;
}

message BasicFetchTranslatedKey {
    string text = 1;
}

message BasicListIds {
    repeated int32 ids = 1;
}

message BasicListName {
    repeated string name = 1;
}

message BasicMixParam {
    string user_name = 1;
}

message BasicMixParamList {
    repeated BasicMixParam results = 1;
    int32 count = 2;
}

message BasicMixParamWithSerializerList {
    repeated google.protobuf.Struct results = 1;
    int32 count = 2;
}

message BasicParamWithSerializerRequest {
    // @test=comment1
    // @test2=comment2
    string user_name = 1;
    // @test=test_in_serializer
    google.protobuf.Struct user_data = 2;
    string user_password = 3;
    bytes bytes_example = 4;
    repeated google.protobuf.Struct list_of_dict = 5;
}

message BasicParamWithSerializerRequestList {
    repeated BasicParamWithSerializerRequest results = 1;
    int32 count = 2;
}

message BasicProtoListChild {
    optional int32 id = 1;
    string title = 2;
    optional string text = 3;
}

message BasicProtoListChildList {
    repeated BasicProtoListChild results = 1;
    int32 count = 2;
}

message BasicService {
    // @test=comment1
    // @test2=comment2
    string user_name = 1;
    // @test=test_in_serializer
    google.protobuf.Struct user_data = 2;
    string user_password = 3;
    bytes bytes_example = 4;
    repeated google.protobuf.Struct list_of_dict = 5;
}

message BasicServiceList {
    repeated BasicService results = 1;
    int32 count = 2;
}

message BasicTestNoMetaSerializer {
    string value = 1;
}

message CustomMixParamForRequest {
    string user_name = 1;
}

message CustomMixParamForRequestList {
    repeated CustomMixParamForRequest results = 1;
    int32 count = 2;
}

message CustomNameForRequest {
    // @test=in_decorator
    string user_name = 1;
}

message CustomNameForResponse {
    string user_name = 1;
}

// Test comment for whole message
message CustomRetrieveResponseSpecialFieldsModel {
    optional string uuid = 1;
    int32 default_method_field = 2;
    repeated google.protobuf.Struct custom_method_field = 3;
}

message ForeignModel {
    optional string uuid = 1;
    string name = 2;
}

message ForeignModelList {
    repeated ForeignModel results = 1;
    int32 count = 2;
}

message ForeignModelListRequest {
}

message ForeignModelRetrieveCustom {
    string name = 1;
    string custom = 2;
}

message ForeignModelRetrieveCustomRetrieveRequest {
    string name = 1;
}

message ImportStructEvenInArrayModel {
    optional string uuid = 1;
    repeated google.protobuf.Struct this_is_crazy = 2;
}

message ManyManyModel {
    optional string uuid = 1;
    string name = 2;
    string test_write_only_on_nested = 3;
}

message NoMeta {
    string my_field = 1;
}

message RecursiveTestModel {
    optional string uuid = 1;
    optional RecursiveTestModel parent = 2;
    repeated RecursiveTestModel children = 3;
}

message RecursiveTestModelDestroyRequest {
    string uuid = 1;
}

message RecursiveTestModelList {
    repeated RecursiveTestModel results = 1;
    int32 count = 2;
}

message RecursiveTestModelListRequest {
}

message RecursiveTestModelPartialUpdateRequest {
    optional string uuid = 1;
    repeated string _partial_update_fields = 2;
    optional RecursiveTestModel parent = 3;
    repeated RecursiveTestModel children = 4;
}

message RecursiveTestModelRetrieveRequest {
    string uuid = 1;
}

message RelatedFieldModel {
    optional string uuid = 1;
    optional ForeignModel foreign = 2;
    repeated ManyManyModel many_many = 3;
    optional int32 slug_test_model = 4;
    repeated bool slug_reverse_test_model = 5;
    repeated string slug_many_many = 6;
    optional string proto_slug_related_field = 7;
    string custom_field_name = 8;
    repeated string many_many_foreigns = 9;
}

message RelatedFieldModelDestroyRequest {
    string uuid = 1;
}

message RelatedFieldModelList {
    repeated RelatedFieldModel list_custom_field_name = 1;
    int32 count = 2;
}

message RelatedFieldModelListRequest {
}

message RelatedFieldModelPartialUpdateRequest {
    optional string uuid = 1;
    optional ForeignModel foreign = 2;
    repeated ManyManyModel many_many = 3;
    optional int32 slug_test_model = 4;
    repeated bool slug_reverse_test_model = 5;
    repeated string slug_many_many = 6;
    optional string proto_slug_related_field = 7;
    string custom_field_name = 8;
    repeated string _partial_update_fields = 9;
    repeated string many_many_foreigns = 10;
}

message RelatedFieldModelRetrieveRequest {
    string uuid = 1;
}

message SimpleRelatedFieldModel {
    optional string uuid = 1;
    optional string foreign = 2;
    optional string slug_test_model = 3;
    repeated string many_many = 4;
    repeated string slug_many_many = 5;
    repeated string many_many_foreigns = 6;
}

message SimpleRelatedFieldModelDestroyRequest {
    string uuid = 1;
}

message SimpleRelatedFieldModelList {
    repeated SimpleRelatedFieldModel results = 1;
    int32 count = 2;
}

message SimpleRelatedFieldModelListRequest {
}

message SimpleRelatedFieldModelPartialUpdateRequest {
    optional string uuid = 1;
    repeated string _partial_update_fields = 2;
    optional string foreign = 3;
    optional string slug_test_model = 4;
    repeated string many_many = 5;
    repeated string slug_many_many = 6;
    repeated string many_many_foreigns = 7;
}

message SimpleRelatedFieldModelRetrieveRequest {
    string uuid = 1;
}

// Special Fields Model
// with two lines comment
message SpecialFieldsModel {
    optional string uuid = 1;
    optional google.protobuf.Struct meta_datas = 2;
    repeated int32 list_datas = 3;
    optional bytes binary = 4;
}

message SpecialFieldsModelDestroyRequest {
    string uuid = 1;
}

message SpecialFieldsModelList {
    repeated SpecialFieldsModel results = 1;
    int32 count = 2;
}

message SpecialFieldsModelListRequest {
}

// Special Fields Model
// with two lines comment
message SpecialFieldsModelPartialUpdateRequest {
    optional string uuid = 1;
    repeated string _partial_update_fields = 2;
    optional google.protobuf.Struct meta_datas = 3;
    repeated int32 list_datas = 4;
    optional bytes binary = 5;
}

message SpecialFieldsModelRetrieve {
    string uuid = 1;
}

message StreamInStreamIn {
    int32 count = 1;
}

message StreamInStreamInList {
    repeated StreamInStreamIn results = 1;
    int32 count = 2;
}

message StreamInStreamToStream {
    string name = 1;
}

message SyncUnitTestModelListWithExtraArgs {
    bool archived = 1;
}

message UnitTestModel {
    optional int32 id = 1;
    string title = 2;
    optional string text = 3;
    int32 model_property = 4;
}

message UnitTestModelDestroyRequest {
    int32 id = 1;
}

message UnitTestModelList {
    repeated UnitTestModel results = 1;
    int32 count = 2;
}

message UnitTestModelListExtraArgs {
    int32 count = 1;
    string query_fetched_datetime = 2;
    repeated UnitTestModel results = 3;
}

message UnitTestModelListRequest {
}

message UnitTestModelListWithExtraArgs {
    bool archived = 1;
}

message UnitTestModelPartialUpdateRequest {
    optional int32 id = 1;
    string title = 2;
    optional string text = 3;
    int32 model_property = 4;
    repeated string _partial_update_fields = 5;
}

message UnitTestModelRetrieveRequest {
    int32 id = 1;
}

message UnitTestModelStreamRequest {
}

message UnitTestModelWithCache {
    optional int32 id = 1;
    string title = 2;
    optional string text = 3;
    int32 model_property = 4;
    string verify_custom_header = 5;
}

message UnitTestModelWithCacheDestroyRequest {
    int32 id = 1;
}

message UnitTestModelWithCacheList {
    repeated UnitTestModelWithCache results = 1;
    int32 count = 2;
}

message UnitTestModelWithCacheListWithStructFilter {
    optional google.protobuf.Struct _filters = 1;
    optional google.protobuf.Struct _pagination = 2;
}

message UnitTestModelWithCachePartialUpdateRequest {
    optional int32 id = 1;
    string title = 2;
    optional string text = 3;
    int32 model_property = 4;
    string verify_custom_header = 5;
    repeated string _partial_update_fields = 6;
}

message UnitTestModelWithCacheRetrieveRequest {
    int32 id = 1;
}

message UnitTestModelWithCacheStreamRequest {
}

message UnitTestModelWithStructFilter {
    optional int32 id = 1;
    string title = 2;
    optional string text = 3;
    int32 model_property = 4;
}

message UnitTestModelWithStructFilterDestroyRequest {
    int32 id = 1;
}

message UnitTestModelWithStructFilterEmptyWithFilter {
    optional google.protobuf.Struct _filters = 1;
    optional google.protobuf.Struct _pagination = 2;
}

message UnitTestModelWithStructFilterList {
    repeated UnitTestModelWithStructFilter results = 1;
    int32 count = 2;
}

message UnitTestModelWithStructFilterPartialUpdateRequest {
    optional int32 id = 1;
    string title = 2;
    optional string text = 3;
    int32 model_property = 4;
    repeated string _partial_update_fields = 5;
}

message UnitTestModelWithStructFilterRetrieveRequest {
    int32 id = 1;
}

message UnitTestModelWithStructFilterStreamRequest {
}

